start fix project

--- a/src/partials/commissions.html
+++ b/src/partials/commissions.html
@@ -71,7 +71,7 @@
       </ul>
 
       <div class="commissions-footer">
-        <p class="commissions-footer-text">
+        <p class="gold-text commissions-footer-text">
           Let's grow together — and earn like never before
         </p>
       </div>
