--- a/src/partials/faq-header.html
+++ b/src/partials/faq-header.html
@@ -40,36 +40,13 @@
         </button>
       </div>
 
-      <ul class="nav-list">
-        <li class="nav-item">
-          <span class="nav-number">01 /</span>
-          <a href="#goal" class="nav-link">Goal</a>
-        </li>
-        <li class="nav-item">
-          <span class="nav-number">02 / </span>
-          <a href="#advantages" class="nav-link">Advantages</a>
-        </li>
-        <li class="nav-item">
-          <span class="nav-number">03 /</span>
-          <a href="#commissions" class="nav-link">Commissions</a>
-        </li>
-        <li class="nav-item">
-          <span class="nav-number">04 /</span>
-          <a href="#testimonials" class="nav-link">Testimonials</a>
-        </li>
-        <li class="nav-item">
-          <span class="nav-number">05 /</span>
-          <a href="#faq" class="nav-link">FAQ</a>
-        </li>
-      </ul>
-
       <div class="burger-img">
         <img src="/images/burger-img.png" alt="decorative smoke" />
       </div>
 
       <div class="header-actions-mobile">
-        <button class="btn-secondary btn-login">Log in</button>
-        <button class="btn-primary btn-register">Registration</button>
+        <button class="btn-login">Log in</button>
+        <button class="btn-register">Registration</button>
       </div>
     </nav>
 
