--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -84,6 +84,6 @@
       </li>
     </ul>
 
-    <a href="../faq-page.html" class="faq-button">More...</a>
+    <a href="./faq-page.html" class="btn-primary faq-button">More...</a>
   </div>
 </section>
