--- a/src/partials/our-advantages.html
+++ b/src/partials/our-advantages.html
@@ -65,25 +65,6 @@
 
         <li class="advantages-item">
           <img
-            src="/images/advantages-star.png"
-            alt="Star"
-            class="advantages-icon"
-          />
-          <div class="wrap-title-text">
-            <h3 class="advantages-subtitle">
-              We Support Your Every Step to Success
-            </h3>
-
-            <p class="advantages-text">
-              No automation. No templates. Just real affiliate managers focused
-              on your success — customizing deals, optimizing tools, and
-              boosting your results. You're always supported
-            </p>
-          </div>
-        </li>
-
-        <li class="advantages-item">
-          <img
             src="/images/advantages-percent.png"
             alt="Percent"
             class="advantages-icon"
@@ -102,8 +83,27 @@
           </div>
         </li>
 
+        <li class="advantages-item">
+          <img
+            src="/images/advantages-star.png"
+            alt="Star"
+            class="advantages-icon"
+          />
+          <div class="wrap-title-text">
+            <h3 class="advantages-subtitle">
+              We Support Your Every Step to Success
+            </h3>
+
+            <p class="advantages-text">
+              No automation. No templates. Just real affiliate managers focused
+              on your success — customizing deals, optimizing tools, and
+              boosting your results. You're always supported
+            </p>
+          </div>
+        </li>
+
         <li class="advantages-item advantages-item--footer">
-          <h3 class="advantages-footer-title">TwoCards Partners</h3>
+          <h3 class="gold-text advantages-footer-title">TwoCards Partners</h3>
           <p class="advantages-footer-text">
             Ready to grow with us? Let's talk strategy, commissions, and custom
             deals.
@@ -111,7 +111,7 @@
           <p class="advantages-footer-subtext">
             Trusted by 1000+ affiliates worldwide 🌍
           </p>
-          <a href="#contact" class="btn-contact">Contact Us</a>
+          <a href="#contact" class="btn-primary btn-contact">Contact Us</a>
         </li>
       </ul>
     </div>
