--- a/src/partials/cookie.html
+++ b/src/partials/cookie.html
@@ -9,7 +9,7 @@
     of cookies.
   </p>
   <div class="cookie-buttons">
-    <button class="btn-learn">Learn more</button>
-    <button class="btn-accept">Accept</button>
+    <button class="btn-secondary btn-learn">Learn more</button>
+    <button class="btn-primary btn-accept">Accept</button>
   </div>
 </div>
