--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,9 @@
 <section id="hero" class="hero-section">
   <div class="hero-container">
     <div class="wrapper-hero-text">
-      <h1 class="hero-title">TwoCards Partners</h1>
+      <h1 class="gold-text hero-title">TwoCards Partners</h1>
       <p class="hero-text">Turn your traffic into profit</p>
-      <button class="btn-start" type="button">Let's start</button>
+      <button class="btn-primary btn-start" type="button">Let's start</button>
     </div>
     <div class="hero-img-wrap">
       <picture>
