--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -12,13 +12,16 @@ body {
 
 .container {
   min-width: 320px;
-  max-width: 1110px;
+  // max-width: 1110px;
+  max-width: 425px; /*****************************/
   width: 100%;
   margin: 0 auto;
   padding: 32px 16px;
 
   @include media(desktop) {
-    padding: 100px 0;
+    // padding: 100px 0;
+    padding: 100px 16px; /**************************/
+    max-width: 1110px; /**************************/
   }
 }
 
@@ -64,5 +67,80 @@ body {
 
   @include media(desktop) {
     font-size: 20px;
+  }
+}
+
+.gold-text {
+  background: linear-gradient(
+    90deg,
+    #d8940b 0%,
+    #eeb83a 35.1%,
+    #fff6a7 49.52%,
+    #dda41f 75.49%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: -1px -2px 10px 0 rgba(244, 208, 100, 0.4);
+}
+
+.btn-primary {
+  font-family: $font-family;
+  color: $color-white;
+  border: 2px solid rgba(255, 255, 255, 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
+    0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
+    inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
+    inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
+  background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
+  white-space: nowrap;
+  transition: all 0.3s ease;
+
+  &:hover {
+    transform: scale(0.97);
+    background: linear-gradient(135deg, #b31aff 0%, #5c12c4 100%);
+    box-shadow: 0 0 40px 0 rgba(137, 53, 225, 0.7),
+      0 8px 35px 0 rgba(69, 5, 183, 0.5);
+  }
+
+  &:active {
+    transform: scale(0.97);
+    box-shadow: 0 0 40px 0 rgba(137, 53, 225, 0.7),
+      0 8px 35px 0 rgba(69, 5, 183, 0.5);
+  }
+
+  &:focus {
+    outline: 2px solid #8d43ff;
+    outline-offset: 2px;
+  }
+}
+
+.btn-secondary {
+  font-family: $font-family;
+  color: $color-white;
+  background-color: #1c1f22;
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  transition: all 0.3s ease;
+
+  &:hover {
+    transform: scale(0.97);
+    background-color: #3a3a4e;
+  }
+
+  &:active {
+    transform: scale(0.97);
+    background-color: #3a3a4e;
+  }
+
+  &:focus {
+    outline: 2px solid #8d43ff;
+    outline-offset: 2px;
   }
 }
