--- a/src/scss/cookie.scss
+++ b/src/scss/cookie.scss
@@ -12,6 +12,7 @@
   backdrop-filter: blur(30px);
   background: rgba(0, 0, 0, 0.6);
   animation: slideUp 0.3s ease-out;
+  z-index: 7;
 
   @include media(desktop) {
     flex-direction: row;
@@ -82,41 +83,16 @@
 }
 .btn-learn,
 .btn-accept {
-  font-family: $font-family;
   font-weight: 800;
   font-size: 15px;
-  color: $color-white;
   padding: 13px 20px;
-  width: 1;
+  width: 100%;
   border-radius: 100px;
-  transition: all 0.3s ease;
 
   @include media(desktop) {
     font-size: 20px;
     padding: 18px 24px;
     width: 191px;
     height: 60px;
-  }
-}
-
-.btn-learn {
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  background: #1c1f22;
-
-  &:hover {
-    background: #3a3a4e;
-  }
-}
-
-.btn-accept {
-  border: 2px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
-    0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
-    inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
-    inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
-  background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
-
-  &:hover {
-    background: linear-gradient(135deg, #b31aff 0%, #5c12c4 100%);
   }
 }
