--- a/src/scss/faq.scss
+++ b/src/scss/faq.scss
@@ -112,30 +112,33 @@
 }
 
 .faq-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: $font-family;
   font-weight: 800;
   font-size: 15px;
-  color: $color-white;
-  border: 2px solid rgba(255, 255, 255, 0.15);
   border-radius: 100px;
   width: 343px;
   height: 50px;
-  box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
-    0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
-    inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
-    inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
-  background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
   margin: 0 auto;
-  transition: all 0.3s ease;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // font-family: $font-family;
 
-  &:hover {
-    transform: translateY(-3px);
-    // box-shadow: 0 0 40px 0 rgba(137, 53, 225, 0.7),
-    //   0 8px 35px 0 rgba(69, 5, 183, 0.5);
-  }
+  // color: $color-white;
+  // border: 2px solid rgba(255, 255, 255, 0.15);
+
+  // box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
+  //   0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
+  //   inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
+  //   inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
+  // background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
+
+  // transition: all 0.3s ease;
+
+  // &:hover {
+  //   transform: translateY(-3px);
+  //   // box-shadow: 0 0 40px 0 rgba(137, 53, 225, 0.7),
+  //   //   0 8px 35px 0 rgba(69, 5, 183, 0.5);
+  // }
 
   @include media(desktop) {
     font-size: 20px;
