--- a/src/scss/our-advantages.scss
+++ b/src/scss/our-advantages.scss
@@ -100,17 +100,17 @@
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
-  background: linear-gradient(
-    90deg,
-    #d8940b 0%,
-    #eeb83a 35.1%,
-    #fff6a7 49.52%,
-    #dda41f 75.49%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: -1px -2px 10px 0 rgba(244, 208, 100, 0.4);
+  // background: linear-gradient(
+  //   90deg,
+  //   #d8940b 0%,
+  //   #eeb83a 35.1%,
+  //   #fff6a7 49.52%,
+  //   #dda41f 75.49%
+  // );
+  // background-clip: text;
+  // -webkit-background-clip: text;
+  // -webkit-text-fill-color: transparent;
+  // text-shadow: -1px -2px 10px 0 rgba(244, 208, 100, 0.4);
 
   @include media(desktop) {
     font-size: 32px;
@@ -143,31 +143,32 @@
 }
 
 .btn-contact {
-  font-family: $font-family;
   font-weight: 800;
   font-size: 15px;
-  color: $color-white;
-
-  border: 2px solid rgba(255, 255, 255, 0.15);
   border-radius: 100px;
-
-  width: 311px;
+  // width: 311px;
+  width: 100%;
   height: 50px;
+  // font-family: $font-family;
 
-  box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
-    0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
-    inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
-    inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
-  background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
+  // color: $color-white;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s ease;
+  // border: 2px solid rgba(255, 255, 255, 0.15);
 
-  &:hover {
-    transform: translateY(-3px);
-  }
+  // box-shadow: 0 0 30px 0 rgba(137, 53, 225, 0.5),
+  //   0 6px 30px 0 rgba(69, 5, 183, 0.4), 0 4px 4px 0 rgba(48, 0, 134, 0.3),
+  //   inset 4px 4px 10px 0 rgba(255, 255, 255, 0.45),
+  //   inset -6px -4px 10px 0 rgba(0, 0, 0, 0.45);
+  // background: linear-gradient(135deg, #990aff 0%, #490eb7 100%);
+
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // transition: all 0.3s ease;
+
+  // &:hover {
+  //   transform: translateY(-3px);
+  // }
 
   @include media(desktop) {
     font-size: 18px;
